# docs/swagger.json
@@ -142,6 +142,33 @@
                         }
                     },
                     "400": {
+                        "description": "movieid was not provided",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/main.JsonResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/main.Movie"
+                                            }
+                                        },
+                                        "message": {
+                                            "type": "string"
+                                        },
+                                        "type": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "404": {
                         "description": "Failed to delete a movie with the specified movieid because no movie has that id",
                         "schema": {
                             "allOf": [
@@ -205,7 +232,7 @@
                             ]
                         }
                     },
-                    "400": {
+                    "500": {
                         "description": "Failed to delete all movies",
                         "schema": {
                             "allOf": [
@@ -279,6 +306,33 @@
                         }
                     },
                     "400": {
+                        "description": "movieid was not provided",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/main.JsonResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/main.Movie"
+                                            }
+                                        },
+                                        "message": {
+                                            "type": "string"
+                                        },
+                                        "type": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "404": {
                         "description": "Failed to get a movie with the specified movieid because no movie has that id",
                         "schema": {
                             "allOf": [
@@ -317,6 +371,33 @@
                 "responses": {
                     "200": {
                         "description": "Successfully get all movies",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/main.JsonResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/main.Movie"
+                                            }
+                                        },
+                                        "message": {
+                                            "type": "string"
+                                        },
+                                        "type": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to get all movies",
                         "schema": {
                             "allOf": [
                                 {
